# default-python-structure

./: .pre-commit-config.yaml  README.md  pyproject.toml
